--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,10 @@ authors = ["roycehoe <royceinbox@hotmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
+pydantic = "^1.10.7"
 
 [tool.poetry.dev-dependencies]
+black = "^23.3.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
